Modificacion product Cart

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -420,36 +420,34 @@ section div .pd-product-form .pd-quantity .quantity-label {
 .pc-img-product {
   width: 100%;
 }
+.pc-quantity{
+margin: 15px auto;
+padding: 0 10px;
+}
+
 .pc-quantity-label{
     width: 60px;
 }
-.pc-product-quantity{
-    width: 60px;}
 .pc-quantity-label-det{
-    width: 130px;}
-.pc-quantity-label-det{
-    margin-bottom: 20px;
-}
-
+    width: 330px;
+    margin: 3px 15px;
+  }
+  
 /*Product-Cart*/
 .pc-quantity-label{
-width: 160px;  
+width: 260px;  
 border-style: none;
 box-shadow: none;
 }
 
 .pc-quantity-label{
-  width: 60px;
-}
+  width: 60px;}
+
 .pc-product-quantity{
   width: 60px;}
-.pc-quantity-label-det{
-  width: 130px;}
-.pc-quantity-label-det{
-  margin-bottom: 20px;
-}
+
 .pc-product-cantidad {
-  width: 150px;
+  width: 250px;
 }
 .fas fa-minus {
   margin-top:10px ;
@@ -466,9 +464,11 @@ box-shadow: none;
   flex-direction: column;
 }
 .pc-product-label{
-width: 250px;
+width: 200px;
 margin: 15px auto;
-padding: 0 10px;}
+padding: 0 10px;
+}
+
 .pc-botton-inv{
     height: 12px;
 }
@@ -521,6 +521,54 @@ padding: 0 10px;}
     margin: 0 20px 30px 0;
 }
 
+
+.pc-product-cantidad input[type="button"] {
+  padding: 0 5px;
+  min-width: 25px;
+  height: 25px;
+  border: 1px solid #c4c4c4;
+  background: transparent;
+  box-shadow: none;
+}
+
+.pc-product-cantidad input[type="number"] {
+  width: 30px;
+  height: 25px;
+  border-radius: 0;
+  border: 1px solid #c4c4c4;
+  border-right: none;
+  border-left: none;
+  text-align: center;
+}
+
+.pc-quantity .minus {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  cursor: pointer;
+}
+
+.pc-quantity .plus {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  cursor: pointer;
+}
+
+
+
+.pc-counter{
+  display: flex;
+/*justify-content: space-between;
+*/  
+  align-items: flex-start;
+    width: 350px;
+    margin-bottom: 20px;
+}
+
+.pc-counter-label-det-valor{
+  font-weight: bold;
+  padding: 3px 0 0 5px;
+  width: 80px;
+}
 /*#########################################################################################/*/
 /*################## MEDIA 361  ############################################/*/
 /*#########################################################################################/*/
@@ -765,7 +813,12 @@ padding: 0 10px;}
     flex: 40%;
     align-items: flex-end;
   }
-  .pc-product-cantidad,
+  .pc-product-cantidad{
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+  }
+
   .pc-product {
     display: flex;
     justify-content: space-between;
@@ -992,7 +1045,7 @@ div.bottom-content{
   } 
 
   .pc-product-carrito {
-    margin: 15px auto;
+    margin: 15px;
     padding: 0 10px;
   }
 
@@ -1005,16 +1058,8 @@ div.bottom-content{
     padding: 0 10px;
   }
   .pc-eliminar {
-    margin: 15px 40px;
-    padding: 0 10px;
+    margin: 2px 10px;
     height: fit-content;
-  }
-
-  .pc-cart {
-    display: flex;
-    /*justify-content: space-between;
-        /*flex-direction: column;
-        flex-wrap: nowrap;*/
   }
 
   .pc-product-label{
@@ -1022,7 +1067,11 @@ div.bottom-content{
     justify-content: space-between;
     flex-direction: column;
   }
-
+  .pc-quantity{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
   .pc-cart {
     display: flex;
     flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
