--- a/views/enDesarrollo.html
+++ b/views/enDesarrollo.html
@@ -17,9 +17,9 @@
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
-                <li><a href="">Quienes somos </a></li>
-                <li><a href="/productPage">Nuestras Recetas </a></li>
-                <li><a href="">Contactanos </a></li>
+                <li><a href="/notFound">Quienes somos </a></li>
+                <li><a href="/notFound">Nuestras Recetas </a></li>
+                <li><a href="/notFound">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
                 <li><a href="/login">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
