--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -137,8 +137,8 @@
             </div>
 
             <div class="pd-options">
-                <button class="pp-buy">Comprar</button>
-                <button class="pp-add">Agregar al carrito</button>
+                <button class="pd-buy"><a href="/productCart">Comprar</a></button>
+                <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
             </div>
         </div>
         </div>
