--- a/views/index.html
+++ b/views/index.html
@@ -129,12 +129,11 @@
     </div>
 
     <div class="suscribe-section" id="suscribe-section">
-        <p class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></p>
-        <div class="suscribe-bar" >            
+        <div class="suscribe-container">
+            <p class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></p>           
             <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
-            <i class="fas fa-times"  onclick="closeSection()"></i>
         </div> 
-        
+        <i class="fas fa-times"  onclick="closeSection()"></i>       
     </div>
 <footer>
     <div class="main-footer">
