--- a/views/productPage.html
+++ b/views/productPage.html
@@ -109,9 +109,14 @@
                     <button class="pd-seleccionar">Seleccionar</button>
                 </div>
             </article>
-
     </main>
-
+    <div class="suscribe-section" id="suscribe-section">
+        <div class="suscribe-container">
+            <p class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></p>           
+            <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
+        </div> 
+        <i class="fas fa-times"  onclick="closeSection()"></i>       
+    </div>
     <footer>
         <div class="main-footer">
             <div class="div-content-logoFooter">
