--- a/views/productPage.html
+++ b/views/productPage.html
@@ -106,7 +106,7 @@
                 <div class="pd-datos-cerveza">
                     <h4>Pack Personalizado</h4>
                     <h4>Desde $ 600</h4>
-                    <button class="pd-seleccionar">Seleccionar</button>
+                    <button class="pd-seleccionar"><a href="/pack">Seleccionar</a></button>
                 </div>
             </article>
     </main>
