Pongo precio en pd y pack segun juanse y muevo los estilos generales de pd de la media 361

--- a/views/productPage.html
+++ b/views/productPage.html
@@ -61,6 +61,7 @@
                     <h4>IPA</h4>
                     <h4>$ 250</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
+                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
                 </div>
 
             </article>
@@ -71,6 +72,7 @@
                     <h4>Golden Ale</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
+                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -80,6 +82,7 @@
                     <h4>Irish Red</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
+                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -89,6 +92,7 @@
                     <h4>Stout</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar"><a href="/productDetail">Seleccionar</a></button>
+                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
                 </div>
             </article>
 
@@ -98,6 +102,7 @@
                     <h4>Honey</h4>
                     <h4>$ 200</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
+                    <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
                 </div>
             </article>
 
