se sacó  el index de @ media 361 afuera

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -740,6 +740,213 @@ padding: 0 10px;
 
 /*FIN PACK PERSONALIZADO*/
 
+    
+/*°°°°°°°°° INDEX °°°°°°°°°°°*/
+/*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+/*index-top*/
+section.ind-top {
+  display: flex;
+  flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
+  justify-content: space-evenly;
+  width: 100%;
+  margin-top: 5px;
+  border-bottom: 5px #949494 solid;
+  border-top: 2px #949494 solid;
+}
+
+div.reel-1,
+div.reel-2,
+div.reel-3,
+div.reel-4 {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 5px;
+  max-height: 200px;
+}
+  /*seccion Media*/
+  body.ind-body {
+    background-color: #eeede1a8;
+    font-family: "Montagu Slab", serif;
+    background-image: url("/Desing/Logo-Etiqueta-Originals/512x512original.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 40%;
+    position: relative;
+    background-blend-mode: lighten;
+  }
+  section.ind-bottom {
+    display: flex;
+  }
+  section.ind-middle {
+    margin: 10px 0;
+  }
+  div.left-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-height: 250px;
+    margin-left: auto;
+
+  }
+  div.best {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 300px;
+    height: 250px;
+    border: #000 2px solid;
+    border-radius: 12px;
+    box-shadow: 0 0 10px #000;
+    text-align: center;
+    background-color: #ffda4d;
+  }
+  article.art-1 {
+    display: flex;
+    flex-direction: column;
+    border-bottom: black 1px solid;
+    margin: auto;
+    width: 33%;
+  }
+  div.best h3 {
+    padding: 0 5px;
+    font-size: 16px;
+    margin-top: 5px;
+  }
+  
+  div.best h4 {
+    padding: 0 5px;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+  button.art-1 {
+    margin: 10px auto;
+    padding: 5px;
+    background-color: #ff6200;
+    color: #fff;
+    width: 75%;
+    text-align: center;
+    border-radius: 15px;
+    text-shadow: black 0 0 8px;
+    box-shadow: 0 0 8px #000;
+    cursor: pointer;
+  }
+  /*CONTENEDOR PADRE lado derecho*/
+  div.right-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 20px;
+    
+  }
+ /* texto del body lado derecho "cuando abrimos una..."*/
+  article.art-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 15px;
+    padding: 20px;
+    border: #949494 1px dotted;
+    border-radius: 52px;
+    box-shadow: 0 0 10px #000;
+    background-color: #ebebeb;
+    text-align: center;
+    width: 80%;
+    opacity: 90%;
+  }
+  article.art-3 h4 {
+    font-size: 12px;
+    padding-bottom: 2px;
+  }
+  
+  article.art-3 h4.bold {
+    margin: 5px 0;
+    font-style: italic;
+    font-weight: bold;
+    color: #ff6200;
+  }
+  article.art-3 h3 {
+    padding: 5px 0;
+    border-top: #ff8a00 1px double;
+    border-bottom: #ff8a00 1px double;
+    text-align: center;
+  }
+
+/* section middle-bootom*/
+section.bottom-content{
+  display: flex;
+  border-bottom: 5px #949494 solid;
+  margin: 40px 10px;
+  justify-content: center;
+}
+div.bottom-content{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  justify-content: space-evenly;
+  width: 95%;
+
+}
+  article.art-2,
+  article.art-4,
+  article.art-5 {
+    display: flex;
+    border: #949494 1px solid;
+    box-shadow: 0 0 10px #000;
+    margin: 15px auto;
+    opacity: 90%;
+    height: auto;
+    position: relative;
+}
+
+  article.art-2, article.art-4 {
+    left: 5%;
+  }
+  
+  article.art-4 {
+    margin: auto ; 
+    
+  }
+  article.art-5 {
+    margin: 15px ;
+        
+  }
+  article.art-5 img{
+    text-align: center;
+    
+  }
+
+  /*botones de la seccion 3*/
+   .ind-map-env-pag {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 26%;
+    margin: auto;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #000;
+    padding: 5px 5px auto 15px;
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: black 0 0 10px;
+    height: 90px;
+    text-align: center;
+    background-color: #ff8a00;
+    color: #ffffff;
+    cursor: pointer;
+  }
+  
+  a.ind-bottom {
+    color: white;
+  }
+  .ind-map-env-pag:hover {
+    color: #541e00;
+    text-shadow: 10px 10px 20px rgb(255, 255, 255, 0.8);
+    transform: scale(98%);
+  }
+
 /*#########################################################################################/*/
 /*################## MEDIA 361  ############################################/*/
 /*#########################################################################################/*/
@@ -1013,219 +1220,8 @@ padding: 0 10px;
     /*flex-wrap: wrap;*/
   }
 
-    
-/*°°°°°°°°° INDEX °°°°°°°°°°°*/
-/*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
-/*index-top*/
-section.ind-top {
-  display: flex;
-  flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
-  justify-content: space-evenly;
-  width: 100%;
-  margin-top: 5px;
-  border-bottom: 5px #949494 solid;
-  border-top: 2px #949494 solid;
-}
 
-div.reel-1,
-div.reel-2,
-div.reel-3,
-div.reel-4 {
-  display: flex;
-  justify-content: space-around;
-  margin: 10px 5px;
-  max-height: 200px;
-}
-  /*seccion Media*/
-  body.ind-body {
-    background-color: #eeede1a8;
-    font-family: "Montagu Slab", serif;
-    background-image: url("/Desing/Logo-Etiqueta-Originals/512x512original.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 40%;
-    position: relative;
-    background-blend-mode: lighten;
-  }
-  section.ind-bottom {
-    display: flex;
-  }
-  section.ind-middle {
-    margin: 10px 0;
-  }
-  div.left-content {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    max-height: 250px;
-    margin-left: auto;
 
-  }
-  div.best {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    width: 300px;
-    height: 250px;
-    border: #000 2px solid;
-    border-radius: 12px;
-    box-shadow: 0 0 10px #000;
-    text-align: center;
-    background-color: #ffda4d;
-  }
-  article.art-1 {
-    display: flex;
-    flex-direction: column;
-    border-bottom: black 1px solid;
-    margin: auto;
-    width: 33%;
-  }
-  div.best h3 {
-    padding: 0 5px;
-    font-size: 16px;
-    margin-top: 5px;
-  }
-  
-  div.best h4 {
-    padding: 0 5px;
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  button.art-1 {
-    margin: 10px auto;
-    padding: 5px;
-    background-color: #ff6200;
-    color: #fff;
-    width: 75%;
-    text-align: center;
-    border-radius: 15px;
-    text-shadow: black 0 0 8px;
-    box-shadow: 0 0 8px #000;
-    cursor: pointer;
-  }
-  /*CONTENEDOR PADRE lado derecho*/
-  div.right-content {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px 20px;
-    
-  }
- /* texto del body lado derecho "cuando abrimos una..."*/
-  article.art-3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 15px;
-    padding: 20px;
-    border: #949494 1px dotted;
-    border-radius: 52px;
-    box-shadow: 0 0 10px #000;
-    background-color: #ebebeb;
-    text-align: center;
-    width: 80%;
-    opacity: 90%;
-  }
-  article.art-3 h4 {
-    font-size: 12px;
-    padding-bottom: 2px;
-  }
-  
-  article.art-3 h4.bold {
-    margin: 5px 0;
-    font-style: italic;
-    font-weight: bold;
-    color: #ff6200;
-  }
-  article.art-3 h3 {
-    padding: 5px 0;
-    border-top: #ff8a00 1px double;
-    border-bottom: #ff8a00 1px double;
-    text-align: center;
-  }
-
-/* section middle-bootom*/
-section.bottom-content{
-  display: flex;
-  border-bottom: 5px #949494 solid;
-  margin: 40px 10px;
-  justify-content: center;
-}
-div.bottom-content{
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
-  justify-content: space-evenly;
-  width: 95%;
-
-}
-
-  article.art-2 {
-    display: flex;
-    margin: 15px auto;
-    border: #949494 1px solid;
-    box-shadow: 0 0 10px #000;
-    opacity: 90%;
-    height: auto;
-    position: relative;
-    left: 5%;
-  }
-  article.art-4 {
-    display: flex;
-    margin: auto 15px ;
-    border: #949494 1px solid;
-    box-shadow: 0 0 10px #000;
-    opacity: 90%;
-    height: auto;
-    position: relative;
-    left: 5%;
-  }
-  article.art-5 {
-    display: flex;
-    margin: 15px ;
-    border: #949494 1px solid;
-    box-shadow: 0 0 10px #000;
-    opacity: 90%;
-    height: auto;
-    position: relative;
-    
-  }
-  article.art-5 img{
-    text-align: center;
-    
-  }
-
-  /*botones de la seccion 3*/
-   .ind-map-env-pag {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 26%;
-    margin: auto;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #000;
-    padding: 5px 5px auto 15px;
-    font-size: 16px;
-    font-weight: bold;
-    text-shadow: black 0 0 10px;
-    height: 90px;
-    text-align: center;
-    background-color: #ff8a00;
-    color: #ffffff;
-    cursor: pointer;
-  }
-  
-  a.ind-bottom {
-    color: white;
-  }
-  .ind-map-env-pag:hover {
-    color: #541e00;
-    text-shadow: 10px 10px 20px rgb(255, 255, 255, 0.8);
-    transform: scale(98%);
-  }
 /*Product-Cart MEDIA 361*/
   .pc-options-button{
     margin-bottom: 0 20px 0 0;
@@ -1330,6 +1326,9 @@ div.bottom-content{
     align-items: flex-end;
   }
 
+  /*°°°°°°°  FOOTER Y SUSCRIBE °°°°°°°°°°°°°*/
+  /*°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+
   .div-content-logoFooter {
     flex: 30%;
     padding: 10px 0;
@@ -1357,6 +1356,9 @@ div.bottom-content{
     align-items: flex-end;
   }
 
+/*°°°°°°°  PRODUCT CART °°°°°°°°°°°°°*/
+/*°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+
   .pc-product-cantidad,
   .pc-product {
     display: flex;
@@ -1377,8 +1379,8 @@ div.bottom-content{
   }
 
 
-/*°°°°°°°°°°°INDEX°°°°°°°°°°°*/
-/*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+/*°°°°°°°°°°°  INDEX  °°°°°°°°°°°*/
+/*°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°*/
 
 /*index-top*/
 
@@ -1401,7 +1403,7 @@ div.left-content {
   margin-left: 15px;
 }
 div.best {
-  height: 350px;
+  height: 285px;
   margin: 10px 20px 10px 10px;
   border: #000 2px solid;
   border-radius: 12px;
@@ -1412,14 +1414,14 @@ div.best {
 article.art-1 {
   width: 45%;
   position: relative;
+  margin: 0 auto;
 }
  article.art-1 img{
     width: 100%;
     
   }
 
-
-/*CONTENEDOR PADRE lado derecho*/
+/*CONTENEDOR lado derecho*/
 div.right-content {
   flex-direction: initial;
   justify-content: space-evenly;
@@ -1427,21 +1429,19 @@ div.right-content {
  
 }
 
-/* texto del body lado derecho "cuando abrimos una..."*/
+/* texto  "cuando abrimos una..."*/
 article.art-3 {
   order: -1;
 }
 
 div.bottom-content{
   width: 90%;
-
 }
 
 article.art-2 {
   margin: auto;
  
 }
-
 
 article.art-5 {
   left: 5%;
@@ -1454,15 +1454,12 @@ article.art-5 {
   padding: 15px 15px auto 15px;
 }
 
+
 /* PACK PERSONALIZADO */
 .pd-pack-area .pd-pack-container-left, .pd-pack-area .pd-pack-container-right {
   width: 40%;
 }
 /* FIN PACK PERSONALIZADO */
-  
-
-
-
 
 }
 /*#########################################################################################/*/
@@ -1553,27 +1550,17 @@ article.art-5 {
  /*°°°°°°°°°°°INDEX°°°°°°°°°°°*/
 /*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
 
-/*index-top*/
-
-  div.left-content {
-    width: 200px;
-    max-height: 300px;
-    margin-left: 15px;
-  }
-  div.best {
-    width: 100%;
-    height: 350px;
+    
    
-  }
-  article.art-1 {
-    width: 75%;
-  }
- 
-  article.art-2 {
-    margin: 10px;
+section.ind-top, section.ind-middle, section.bottom-content, section.ind-bottom{
+  max-width: 1800px;
+  margin: auto;
   
-  }
-  
+}
+section.ind-bottom{
+  margin-top: 10px;
+
+}
 }
 
 /*#########################################################################################/*/
