sacamos fondo indexcopia

--- a/views/indexCopia.html
+++ b/views/indexCopia.html
@@ -18,7 +18,7 @@
         }
     </script>
 </head>
-<body class="ind-body">
+<body class="ic-body">
     <header class="main-header">
         <nav class="main-navbar">
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
